# schule_profil_website

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  lifeline
2023_01_10_aufgabe_1/: Aufgabe 1.docx  aufgabe_1.html  aufgabe_2.html  helloWorld.html  hello_world.html  unterricht.html
2023_01_10_aufgabe_1/css/: app.css
2023_01_17/: unterricht.html
2023_01_17/aufgabe_2/: index.html
2023_01_17/aufgabe_2/verweis/: index_gross_bild.html
2023_01_17/aufgabe_3/: index.html
2023_01_17/aufgabe_3/verweis/: daten.html  index_gross_bild.html
2023_01_17/icon/: SOURCES.md
2023_01_17/pic/: SOURCE.md
2023_01_24/: unterricht.html
2023_01_24/aufgabe_4/: Aufgabe 4.docx  Quellen.md  index.html
2023_01_24/aufgabe_4/style/: main.css
2023_01_24/aufgabe_4/verweise/: antibottom.html  anticharm.html  antidown.html  antimuon.html  (+26 more)
2023_01_24/uebung_downloads/: QUELLEN.md  index.html
2023_01_31/: unterricht.html
2023_01_31/design/: Quellen.md
2023_01_31/style/: style.css
2023_01_31/uebung_div/: index.html
2023_02_28/: unterricht.html
2023_02_28/uebung_video/: index.html  index_2.html
2023_03_07/lifeline/: README.md  index.html
2023_03_07/quiz/: index.html
2023_03_07/quiz_2/: Cargo.toml
2023_03_07/quiz_2/src/: main.rs
2023_03_07/schriftart/: index.html
2023_03_21/margin_padding/: index.html
2023_03_21/nav/: index.html
2023_03_28/ani/: index.html  style.css
2023_03_28/movie/: index.html  style.css
Notizen/: templates.md  vokublar.md
templates/Foundation-Sites-CSS/: index.html
templates/bulma/: bulma.css.map
(+83 files in other folders)
