[package]
name = "quiz_2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [
  "json",
] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde = { version = "1.0.158", features = ["derive"] } # for our JSON parsing
serde_json = "1.0.94"
anyhow = "1.0.70"
